Fix grid slider whitespace

--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -71,6 +71,7 @@ table {
   width: 100%;
 
   border-collapse: collapse;
+  font-family: $typeface-secondary;
 }
 
 tr {
