--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,5 +1,7 @@
 .grid {
   &__slider {
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
 
     margin: 0 0 20px;
